Creacion de header y banner

--- a/ProyectoFinal_TomasFlorio/angular.json
+++ b/ProyectoFinal_TomasFlorio/angular.json
@@ -23,9 +23,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css","Proyecto_Final_TomasFlorio/ProyectoFinal_TomasFlorio/node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": []
+            "scripts": [
+              "Proyecto_Final_TomasFlorio/ProyectoFinal_TomasFlorio/node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -97,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
