Agregado de partes educación, experiencia, acerca de y hyf

--- a/ProyectoFinal_TomasFlorio/angular.json
+++ b/ProyectoFinal_TomasFlorio/angular.json
@@ -23,11 +23,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css","Proyecto_Final_TomasFlorio/ProyectoFinal_TomasFlorio/node_modules/bootstrap/dist/css/bootstrap.css"
+              "src/styles.css","node_modules/bootstrap/dist/css/bootstrap.css"
             ],
-            "scripts": [
-              "Proyecto_Final_TomasFlorio/ProyectoFinal_TomasFlorio/node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
