--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Backend/tf/src/main/resources/application.properties
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Backend/tf/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 jwt.secret = secret
 jwt.expiration = 3600
 spring.main.allow-bean-definition-overriding=true
+management.security.enabled=false
