--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Backend/tf/src/main/resources/application.properties
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Backend/tf/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Local
 spring.datasource.url=jdbc:mysql://localhost:3306/backendtf?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Produccion
+#spring.datasource.url=jdbc:mysql://uniu4wx4i19jtkqt:DCUVUV4HAgYYT4jGAShD@biqr4nojiweb2ub63axn-mysql.services.clever-cloud.com:3306/biqr4nojiweb2ub63axn
+#spring.datasource.username=uniu4wx4i19jtkqt
+#spring.datasource.password=DCUVUV4HAgYYT4jGAShD
 
 jwt.secret = secret
 jwt.expiration = 3600
