--- a/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Backend/tf/src/main/resources/application.properties
+++ b/ProyectoFinal_TomasFlorio/Proyecto_Final_TomasFlorio_Backend/tf/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Local
-spring.datasource.url=jdbc:mysql://localhost:3306/backendtf?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendtf?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 
 #Produccion
-#spring.datasource.url=jdbc:mysql://uniu4wx4i19jtkqt:DCUVUV4HAgYYT4jGAShD@biqr4nojiweb2ub63axn-mysql.services.clever-cloud.com:3306/biqr4nojiweb2ub63axn
-#spring.datasource.username=uniu4wx4i19jtkqt
-#spring.datasource.password=DCUVUV4HAgYYT4jGAShD
+spring.datasource.url=jdbc:mysql://umaueqefqtocxtsi:txKRJ0ElsRH2V6qGobZM@b0rnqfpm2d7cnbsrdadr-mysql.services.clever-cloud.com:3306/b0rnqfpm2d7cnbsrdadr
+spring.datasource.username=umaueqefqtocxtsi
+spring.datasource.password=txKRJ0ElsRH2V6qGobZM
 
 jwt.secret = secret
 jwt.expiration = 3600
